pkp/pkp-lib#563: fix x axis alignment on firefox

--- a/plugins/generic/alm/css/almviz.css
+++ b/plugins/generic/alm/css/almviz.css
@@ -14,6 +14,10 @@
 	font-size: 11px;
 }
 
+.x.axis {
+	-moz-transform: translate(0,90px);
+}
+
 .axis line,
 .axis path {
 	fill: none;
